fix: dark mode not working on button page, close #89

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -7,7 +7,7 @@
 
 // Fix icon placement
 body .bi::before, [class^=bi-]::before, [class*=" bi-"]::before {
-    vertical-align: baseline;
+    vertical-align: middle;
 }
 
 // Import fonts
